cleaned some code , fixed some bugs

--- a/src/Frontend/src/app/Feature/doctor-profile/doctor-profile.html
+++ b/src/Frontend/src/app/Feature/doctor-profile/doctor-profile.html
@@ -1,4 +1,4 @@
-@if(typeof doctor!= "string"){
+@if(typeof doctor!= "string" && !errorFound){
 
 <section id="hero" class="hero section pb-0">
     <div class="container section-title aos-init aos-animate pb-0" data-aos="fade-up">
