--- a/src/Frontend/src/app/Feature/doctor-register-form/doctor-register-form.html
+++ b/src/Frontend/src/app/Feature/doctor-register-form/doctor-register-form.html
@@ -59,7 +59,7 @@
                   <option value="" disabled>-- Select Specialty --</option>
                   <option value="Cats">Cats</option>
                   <option value="Dogs">Dogs</option>
-                  <option value="Birds">Birds</option>
+                  <!-- <option value="Birds">Birds</option> -->
                 </select>
               </div>
 
