--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -1,6 +1,6 @@
 <header class="header bg-light border-bottom  py-2">
   <div class="container d-flex justify-content-between align-items-center">
-    
+
     <!-- Logo -->
     <a routerLink="/" class="logo text-decoration-none d-flex align-items-center">
       <h1 class="sitename mb-0 fw-bold text-primary pointer">PetConnect</h1><span class="text-danger fs-4 ms-1">.</span>
@@ -23,10 +23,15 @@
         <li class="nav-item"><a class="nav-link text-dark fw-semibold pointer" routerLink="/contact">Contact</a></li>
       </ul>
 
-      <!-- Auth Buttons (Mobile) -->
-      <div class="btns d-none d-xl-block  ms-3">
-        <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
-        <a class="btn btn-primary" routerLink="/register">Register</a>
+
+      <div class="btns d-none d-xl-block ms-3">
+        <ng-container *ngIf="!isAuthenticated()">
+          <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
+          <a class="btn btn-primary" routerLink="/register">Register</a>
+        </ng-container>
+        <ng-container *ngIf="isAuthenticated()">
+          <button class="btn btn-danger" (click)="logout()">Logout</button>
+        </ng-container>
       </div>
 
       <!-- Mobile toggle -->
