--- a/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
+++ b/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
@@ -7,6 +7,10 @@
 
     <!-- Category Filter -->
     <div class="mb-4">
+      <div *ngIf="loading" class="text-center p-5">
+        <div class="spinner-border text-primary" role="status"></div>
+        <p class="mt-3">Loading pet details...</p>
+      </div>
       <label class="form-label">Filter by Category</label>
       <select
         class="form-select"
@@ -31,7 +35,7 @@
             </p>
             <div class="d-flex justify-content-center gap-2 mt-3">
               <a
-                [routerLink]="['/breeds/edit', breed.id]"
+                [routerLink]="['/breed', breed.id]"
                 class="btn btn-outline-primary btn-sm w-100"
               >
                 <i class="bi bi-pencil-square me-1"></i> Edit
