--- a/src/Frontend/src/app/Feature/breeds/breed-details/breed-details.html
+++ b/src/Frontend/src/app/Feature/breeds/breed-details/breed-details.html
@@ -47,7 +47,7 @@
             [(ngModel)]="breed.categoryId"
             required
           >
-            <option value="">-- Select Category --</option>
+            <option value="0" selected>-- Select Category --</option>
             <option *ngFor="let cat of categories" [value]="cat.id">
               {{ cat.name }}
             </option>
