--- a/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
+++ b/src/Frontend/src/app/Feature/breeds/all-breeds/all-breeds.html
@@ -1,10 +1,28 @@
-<section class="section">
-  <div class="container">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2>Pet Breeds</h2>
+<section id="hero" class="hero section pb-2">
+  <div
+    class="container section-title aos-init aos-animate pb-0"
+    data-aos="fade-up"
+  >
+    <h2>Manage Breeds</h2>
+    <p>Find your new best friend and give a rescued pet a loving home.</p>
+
+    <div class="mt-3 d-flex justify-content-center gap-3">
+      <a routerLink="/pets" class="btn btn-outline-primary btn-sm">
+        All Pets
+      </a>
       <a routerLink="/add-breed" class="btn btn-primary">Add New Breed</a>
     </div>
 
+    <div *ngIf="loading" class="text-center p-5">
+      <div class="spinner-border text-primary" role="status"></div>
+      <p class="mt-3">Loading pet details...</p>
+    </div>
+    <!-- <div *ngIf="error" class="alert alert-danger">{{ error }}</div> -->
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
     <!-- Category Filter -->
     <div class="mb-4">
       <div *ngIf="loading" class="text-center p-5">
@@ -13,7 +31,7 @@
       </div>
       <label class="form-label">Filter by Category</label>
       <select
-        class="form-select"
+        class="form-select col-md-4"
         (change)="onCategoryChange($event)"
         [(ngModel)]="selectedCategoryId"
       >
@@ -26,7 +44,7 @@
 
     <!-- Breeds List -->
     <div class="row">
-      <div class="col-md-6 col-lg-4 mb-4" *ngFor="let breed of filteredBreeds">
+      <div class="col-md-6 col-lg-3 mb-4" *ngFor="let breed of filteredBreeds">
         <div class="card shadow border-0 rounded-4 h-100">
           <div class="card-body d-flex flex-column justify-content-between">
             <h5 class="card-title text-center">{{ breed.name }}</h5>
