--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -2,10 +2,7 @@
   <div class="container d-flex justify-content-between align-items-center">
 
     <!-- Logo -->
-    <a
-      routerLink="/"
-      class="logo text-decoration-none d-flex align-items-center"
-    >
+    <a routerLink="/" class="logo text-decoration-none d-flex align-items-center">
       <h1 class="sitename mb-0 fw-bold text-primary pointer">PetConnect</h1>
       <span class="text-danger fs-4 ms-1">.</span>
     </a>
@@ -14,24 +11,13 @@
     <nav class="navmenu d-flex align-items-center">
       <ul class="nav list-unstyled mb-0 d-none d-xl-flex">
         <li class="nav-item">
-          <a class="nav-link text-dark fw-semibold pointer" routerLink="/"
-            >Home</a
-          >
+          <a class="nav-link text-dark fw-semibold pointer" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link text-dark fw-semibold pointer"
-            routerLink="/doctors"
-            >Doctors</a
-          >
+          <a class="nav-link text-dark fw-semibold pointer" routerLink="/doctors">Doctors</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-dark fw-semibold pointer"
-            data-bs-toggle="dropdown"
-            href="#"
-            >Pets</a
-          >
+          <a class="nav-link dropdown-toggle text-dark fw-semibold pointer" data-bs-toggle="dropdown" href="#">Pets</a>
           <ul class="dropdown-menu shadow">
             <li>
               <a class="dropdown-item pointer" routerLink="/pets">All Pets</a>
@@ -40,23 +26,15 @@
               <a class="dropdown-item pointer" routerLink="/add-pet">Add Pet</a>
             </li>
             <li>
-              <a class="dropdown-item pointer" routerLink="/categories"
-                >Manage Categories</a
-              >
+              <a class="dropdown-item pointer" routerLink="/categories">Manage Categories</a>
             </li>
             <li>
-              <a class="dropdown-item pointer" routerLink="/breeds"
-                >Manage Breeds</a
-              >
+              <a class="dropdown-item pointer" routerLink="/breeds">Manage Breeds</a>
             </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link text-dark fw-semibold pointer"
-            routerLink="/contact"
-            >Contact</a
-          >
+          <a class="nav-link text-dark fw-semibold pointer" routerLink="/contact">Contact</a>
         </li>
       </ul>
 
@@ -65,25 +43,21 @@
         <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
         <a class="btn btn-primary" routerLink="/register">Register</a>
 
-      <div class="btns d-none d-xl-block ms-3">
-        <ng-container *ngIf="!isAuthenticated()">
-          <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
-          <a class="btn btn-primary" routerLink="/register">Register</a>
-        </ng-container>
-        <ng-container *ngIf="isAuthenticated()">
-          <button class="btn btn-danger" (click)="logout()">Logout</button>
-        </ng-container>
-      </div>
+        <div class="btns d-none d-xl-block ms-3">
+          <ng-container *ngIf="!isAuthenticated()">
+            <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
+            <a class="btn btn-primary" routerLink="/register">Register</a>
+          </ng-container>
+          <ng-container *ngIf="isAuthenticated()">
+            <button class="btn btn-danger" (click)="logout()">Logout</button>
+          </ng-container>
+        </div>
 
-      <!-- Mobile toggle -->
-      <button
-        class="btn d-xl-none ms-3"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mobileMenu"
-      >
-        <i class="bi bi-list fs-4 text-dark"></i>
-      </button>
+        <!-- Mobile toggle -->
+        <button class="btn d-xl-none ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu">
+          <i class="bi bi-list fs-4 text-dark"></i>
+        </button>
+      </div>
     </nav>
   </div>
 
@@ -95,9 +69,7 @@
       <li><a class="nav-link pointer" routerLink="/pets">All Pets</a></li>
       <li><a class="nav-link pointer" routerLink="/add-pet">Add Pet</a></li>
       <li>
-        <a class="nav-link pointer" routerLink="/categories"
-          >Manage Categories</a
-        >
+        <a class="nav-link pointer" routerLink="/categories">Manage Categories</a>
       </li>
       <li>
         <a class="nav-link pointer" routerLink="/breeds">Manage Breeds</a>
