--- a/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
+++ b/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
@@ -6,7 +6,10 @@
     <h2>Discover Our Pets</h2>
     <p>Find your new best friend and give a rescued pet a loving home.</p>
 
-    <div class="mt-3 d-flex justify-content-center gap-3">
+    <div
+      class="mt-3 d-flex justify-content-center gap-3"
+      *ngIf="accountservice.isAuthenticated()"
+    >
       <a class="btn btn-primary btn-sm" routerLink="/categories">
         Manage Categories
       </a>
