--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -65,7 +65,7 @@
         <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
         <a class="btn btn-primary" routerLink="/register">Register</a>
 
-      <div class="btns d-none d-xl-block ms-3">
+      <div class="btns d-block d-xl-none ms-3">
         <ng-container *ngIf="!isAuthenticated()">
           <a class="btn btn-outline-primary me-2" routerLink="/login">Login</a>
           <a class="btn btn-primary" routerLink="/register">Register</a>
@@ -84,7 +84,6 @@
       >
         <i class="bi bi-list fs-4 text-dark"></i>
       </button>
-    </nav>
   </div>
 
   <!-- Mobile Menu -->
@@ -111,4 +110,3 @@
       </li>
     </ul>
   </div>
-</header>
