--- a/src/Frontend/src/app/Feature/customer-profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/customer-profile.html
@@ -11,7 +11,7 @@
       </div>
 
       <!-- Profile Content (scrolls if overflows) -->
-      <div class="flex-grow-1 overflow-auto">
+      <!-- <div class="flex-grow-1 overflow-auto">
         <div class="r mb-3">
           <img
             src="https://localhost:7102/assets/UserImages/default-user.png"
@@ -29,7 +29,7 @@
           <li><strong>Phone:</strong> {{ customer.phone }}</li>
           <li><strong>Joined:</strong> {{ customer.createdAt }}</li>
         </ul>
-      </div>
+      </div> -->
 
       <!-- Footer -->
       <div class="pt-2 border-top text-center">
@@ -129,10 +129,10 @@
           >
             <div class="card shadow-sm h-100">
               <div class="card-body">
-                <h5 class="card-title">{{ req.petName }}</h5>
+                <!-- <h5 class="card-title">{{ req.petName }}</h5> -->
                 <p class="card-text mb-1">
-                  You Requested to adopt {{ req.petName }}
-                  <strong>{{ req.recCustomerId }}</strong>
+                  You Requested to adopt <strong>{{ req.petName }}</strong>
+                  <!-- <strong>{{ req.recCustomerId }}</strong> -->
                 </p>
                 <span
                   class="badge"
