home layout and adoption cycle

--- a/src/Frontend/src/app/Feature/header/header.html
+++ b/src/Frontend/src/app/Feature/header/header.html
@@ -5,7 +5,12 @@
       routerLink="/"
       class="logo text-decoration-none d-flex align-items-center"
     >
-      <h1 class="sitename mb-0 fw-bold text-primary pointer">PetConnect</h1>
+      <h1
+        class="sitename mb-0 fw-bold text-dark pointer"
+        style="font-size: 26px"
+      >
+        PetConnect
+      </h1>
       <span class="text-danger fs-4 ms-1">.</span>
     </a>
     <!-- Navigation -->
