--- a/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
+++ b/src/Frontend/src/app/Feature/customer-profile/Profile/customer-profile.html
@@ -86,7 +86,7 @@
               <p class="mb-0">Email</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">exampl example.com</p>
+              <p class="text-muted mb-0">{{ profileData?.email }}</p>
             </div>
           </div>
           <hr />
@@ -95,7 +95,7 @@
               <p class="mb-0">Phone</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">(097) 234-5678</p>
+              <p class="text-muted mb-0">{{ profileData?.phoneNumber }}</p>
             </div>
           </div>
           <hr />
@@ -113,7 +113,9 @@
               <p class="mb-0">Address</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">{{ profileData?.city }}</p>
+              <p class="text-muted mb-0">
+                {{ profileData?.street }}, {{ profileData?.city }}
+              </p>
             </div>
           </div>
         </div>
