--- a/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
+++ b/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
@@ -6,7 +6,7 @@
     <h2>Discover Our Pets</h2>
     <p>Find your new best friend and give a rescued pet a loving home.</p>
 
-    <div
+    <!-- <div
       class="mt-3 d-flex justify-content-center gap-3"
       *ngIf="authService.isAuthenticated()"
     >
@@ -16,7 +16,7 @@
       <a class="btn btn-outline-primary btn-sm" href="/PetBread">
         Manage Breeds
       </a>
-    </div>
+    </div> -->
   </div>
 </section>
 
@@ -24,17 +24,75 @@
   <div class="spinner-border text-primary" role="status"></div>
   <p class="mt-3">Loading pet details...</p>
 </div>
+<section>
+  <div
+    class="container aos-init aos-animate"
+    data-aos="fade-up"
+    data-aos-delay="100"
+  >
+    <form class="row g-3 mb-2">
+      <!-- Category Filter -->
+      <div class="col-md-4">
+        <label for="categorySelect" class="form-label">Select Category</label>
+        <select
+          id="categorySelect"
+          class="form-select"
+          [(ngModel)]="filters.categoryId"
+          name="categoryId"
+          (change)="applyFilters()"
+        >
+          <option [ngValue]="''" selected>Select a category</option>
+          <option *ngFor="let cat of categories" [ngValue]="cat.id">
+            {{ cat.name }}
+          </option>
+        </select>
+      </div>
 
-<section id="adoptable-pets" class="team section bg-light">
+      <!-- Age Sorting -->
+      <div class="col-md-4">
+        <label for="sortAge" class="form-label">Sort by Age</label>
+        <select
+          id="sortAge"
+          class="form-select"
+          [(ngModel)]="filters.sortOrder"
+          name="sortOrder"
+          (change)="applyFilters()"
+        >
+          <option [ngValue]="''">Default</option>
+          <option [ngValue]="'asc'">Age: Low to High</option>
+          <option [ngValue]="'desc'">Age: High to Low</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label for="locationSearch" class="form-label"
+          >Search by Location</label
+        >
+        <input
+          id="locationSearch"
+          type="text"
+          class="form-control"
+          placeholder="Enter city or country"
+          [(ngModel)]="filters.location"
+          name="location"
+          (input)="applyFilters()"
+        />
+      </div>
+    </form>
+  </div>
+</section>
+<section id="adoptable-pets" class="team section bg-light pt-0">
   <div
     class="container aos-init aos-animate"
     data-aos="fade-up"
     data-aos-delay="100"
   >
     <div class="row g-5">
+      <div *ngIf="filteredPets.length === 0" class="alert alert-danger mt-3">
+        No pets found matching your filters.
+      </div>
       <div
         class="col-md-6 col-lg-3"
-        *ngFor="let pet of pets"
+        *ngFor="let pet of filteredPets"
         data-aos="zoom-in"
         data-aos-delay="100"
       >
@@ -58,7 +116,12 @@
             >
 
             <span *ngIf="authService.getUserId() !== pet.customerId"
-              >Posted by: {{ pet.customerName }}</span
+              ><span class="fw-semibold d-inline">Posted By:</span>
+              {{ pet.customerName }}</span
+            >
+            <span *ngIf="authService.getUserId() !== pet.customerId"
+              ><span class="fw-semibold d-inline">From:</span>
+              {{ pet.customerCity }}</span
             >
             <div class="mt-3 d-flex justify-content-center gap-2">
               <a
