--- a/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
+++ b/src/Frontend/src/app/Feature/pets/All-Pets/pets.html
@@ -30,7 +30,7 @@
     data-aos="fade-up"
     data-aos-delay="100"
   >
-    <form class="row g-3 mb-2">
+    <form class="row g-3 mb-2" *ngIf="!failedLoad && !loading">
       <!-- Category Filter -->
       <div class="col-md-4">
         <label for="categorySelect" class="form-label">Select Category</label>
@@ -87,7 +87,10 @@
     data-aos-delay="100"
   >
     <div class="row g-5">
-      <div *ngIf="filteredPets.length === 0" class="alert alert-danger mt-3">
+      <div
+        class="alert alert-danger mt-3"
+        *ngIf="filteredPets.length === 0 && !failedLoad"
+      >
         No pets found matching your filters.
       </div>
       <div
