--- a/src/Frontend/src/styles.css
+++ b/src/Frontend/src/styles.css
@@ -2596,3 +2596,15 @@ section,
 .form-select {
   border-color: #222;
 }
+/*table*/
+.custom-header th {
+  background-color: #f8f9fc; /* Light gray-blue background */
+  text-transform: uppercase;
+  font-size: 0.75rem; /* Smaller text */
+  letter-spacing: 0.03em;
+  font-weight: 600;
+  padding: 1rem 0.75rem; /* Bigger padding */
+  line-height: 2.5;
+  color: #495057;
+  border-bottom: 2px solid #dee2e6;
+}
