--- a/src/Frontend/src/app/Feature/categories/All-categories/categories.html
+++ b/src/Frontend/src/app/Feature/categories/All-categories/categories.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <section id="hero" class="hero section pb-5 mb-5">
+  <!-- <section id="hero" class="hero section pb-5 mb-5">
     <div
       class="container section-title aos-init aos-animate pb-0"
       data-aos="fade-up"
@@ -22,7 +22,7 @@
       </div>
       <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
     </div>
-  </section>
+  </section> -->
 
   <div class="container pb-5">
     <!-- <div
@@ -35,8 +35,10 @@
     </div> -->
 
     <div class="row g-4">
+      <h5>Manage Categories</h5>
+
       <div class="col-12 col-md-6 col-lg-4" *ngFor="let cat of categories">
-        <div class="card shadow-sm border-0 rounded-4 h-100">
+        <div class="card shadow-rounded-4 h-100">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title text-center flex-grow-1">{{ cat.name }}</h5>
 
